GPC/tests/examples/fail/divBy0.gpc

GPRM::Kernel::Test test;

void GPRM::Test::divBy0(int *a) {
    int y = (1/0);
    test.m1(y);
}
